[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Pixel Adventure 1/Free/Traps/Trampoline/Jump (28x28).png" type="Texture" id=1]
[ext_resource path="res://scripts/jump.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "Jump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.5, 1.5 )

[node name="Jump" type="Area2D"]
priority = 2.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
offset = Vector2( 0, 2 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 16, 32 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 16, 16 )
shape = SubResource( 4 )

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 15.5, 25.5 )
shape = SubResource( 5 )

[node name="TimerResetJump" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_area_entered"]
[connection signal="timeout" from="TimerResetJump" to="." method="_on_TimerResetJump_timeout"]
